--- a/DataVisualizations/Lsun3D.Rmd
+++ b/DataVisualizations/Lsun3D.Rmd
@@ -30,8 +30,7 @@ Data=Lsun3D$Data
 
 #### Details
 Size n=404, Dimensions d=3
-Dataset defined discontinuites, where the clusters have different variances. Three main Clusters,
-and four Outliers (in Cluster 4), see [Thrun, 2018]
+Dataset defined discontinuites, where the clusters have different variances. Three main Clusters, and four Outliers (in Cluster 4), see [Thrun, 2018]
 
 #### References
 [Thrun, 2018] Thrun, M. C.: Projection Based Clustering through Self-Organization and Swarm
