--- a/arsenal/mdy.Date.Rmd
+++ b/arsenal/mdy.Date.Rmd
@@ -27,12 +27,12 @@ is.Date(x)
 
 #### Arguments
 
-* month integer, month (1-12).
-* day integer, day of the month (1-31, depending on the month).
-* year integer, either 2- or 4-digit year. If two-digit number, will add 1900 onto it, depending on range.
-* yearcut cutoff for method to know if to convert to 4-digit year.
-* date A date value.
-* x An object.
+* ``month`` integer, month (1-12).
+* ``day`` integer, day of the month (1-31, depending on the month).
+* ``year`` integer, either 2- or 4-digit year. If two-digit number, will add 1900 onto it, depending on range.
+* ``yearcut`` cutoff for method to know if to convert to 4-digit year.
+* ``date`` A date value.
+* ``x`` An object.
 
 
 #### Examples
@@ -43,7 +43,7 @@ Date.mdy(tmp)
 is.Date(tmp)
 </code></pre>
 
-Details
+#### Details
 Test if an object is a date.
 More work may need to be done with yearcut and 2-digit years. Best to give a full 4-digit year.
 
@@ -51,5 +51,6 @@ More work may need to be done with yearcut and 2-digit years. Best to give a ful
 
 mdy.Date returns a Date object, and Date.mdy returns a list with integer values for month, day, and
 year. is.Date returns a single logical value.
-See Also
+
+#### See Also
 Date, DateTimeClasses
