--- a/timevis/removeCustomTime.Rmd
+++ b/timevis/removeCustomTime.Rmd
@@ -1,4 +1,4 @@
----
+#---
 title: "``add_scalebar``: Add scalebar to frames"
 output: html_document
 ---
@@ -14,33 +14,39 @@ Remove a custom time previously added
 
 ### Usage
 removeCustomTime(id, itemId)
+
 #### Arguments 
-id Timeline id or a timevis object (the output from timevis())
-itemId The id of the custom time bar
+* id Timeline id or a timevis object (the output from timevis())
+* itemId The id of the custom time bar
 
 #### Examples
+```{r}
 timevis() %>%
 addCustomTime(Sys.Date() - 1, "yesterday") %>%
 addCustomTime(Sys.Date() + 1, "tomorrow") %>%
 removeCustomTime("yesterday")
+```
+
+```{r}
 if (interactive()) {
 library(shiny)
 shinyApp(
-ui = fluidPage(
-timevisOutput("timeline"),
-actionButton("btn0", "Add custom time"),
-actionButton("btn", "Remove custom time bar")
-),
-server = function(input, output) {
-output$timeline <- renderTimevis(
-timevis()
+  ui = fluidPage(
+    timevisOutput("timeline"),
+    actionButton("btn0", "Add custom time"),
+    actionButton("btn", "Remove custom time bar")
+  ),
+  server = function(input, output) {
+    output$timeline <- renderTimevis(
+      timevis()
+    )
+    observeEvent(input$btn0, {
+      addCustomTime("timeline", Sys.Date() - 1, "yesterday")
+    })
+    observeEvent(input$btn, {
+      removeCustomTime("timeline", "yesterday")
+    })
+  }
 )
-observeEvent(input$btn0, {
-addCustomTime("timeline", Sys.Date() - 1, "yesterday")
-})
-observeEvent(input$btn, {
-removeCustomTime("timeline", "yesterday")
-})
 }
-)
-}
+```
