--- a/A3/a3.r2.Rmd
+++ b/A3/a3.r2.Rmd
@@ -1,7 +1,5 @@
 ---
-title: "A3"
-author: "Kevin O Brien"
-date: "5 December 2018"
+title: "``A3::a3.r2``"
 output: html_document
 ---
 
@@ -10,11 +8,11 @@ knitr::opts_chunk$set(echo = TRUE)
 library(A3)
 ```
 
-a3.r2 Cross-Validated R^2
+## Cross-Validated $R^2$
+
 #### Description
-Applies cross validation to obtain the cross-validated R2 for a model: the fraction of the squared
-error explained by the model compared to the null model (which is defined as the average response).
-A pseudo R2 is implemented for classification.
+Applies cross validation to obtain the cross-validated $R^2$ for a model: the fraction of the squared error explained by the model compared to the null model (which is defined as the average response).
+A pseudo $R^2$ is implemented for classification.
 
 #### Usage 
 <pre><code>
@@ -23,13 +21,14 @@ a3.r2(y, x, simulate.fn, cv.folds)
 
 #### Arguments 
 
-y a vector or responses.
-x a matrix of features.
-simulate.fn a function object that creates a model and predicts y.
-cv.folds the cross-validation folds.
+* ``y``: a vector or responses.
+* ``x``: a matrix of features.
+* ``simulate.fn``: a function object that creates a model and predicts y.
+* ``cv.folds``: the cross-validation folds.
 
 #### Value
 A list comprising of the following elements:
-* R2 the cross-validated R2
-* predicted the predicted responses
-* observed the observed responses
+
+* ``R2``: the cross-validated R2
+* ``predicted``: the predicted responses
+* ``observed``: the observed responses
