--- a/A3/plotslopes.Rmd
+++ b/A3/plotslopes.Rmd
@@ -1,13 +1,16 @@
 ---
-title: "plotslopes"
+title: "``A3::plotslopes``"
 output: html_document
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+library(A3)
+library(randomForest)
 ```
 
 ###  Plot Distribution of Slopes
+
 #### Description
 Plots an 'A3' object's distribution of slopes for each feature and observation. Uses Kernel Density Estimation to create an estimate of the distribution of slopes for a feature.
 
@@ -26,6 +29,6 @@ plotSlopes(x, ...)
 require(randomForest)
 data(housing)
 x <- a3(MED.VALUE ~ NOX + PUPIL.TEACHER + ROOMS + AGE + HIGHWAY + 0,
-housing, randomForest, p.acc = NULL, n.folds = 2)
+        housing, randomForest, p.acc = NULL, n.folds = 2)
 plotSlopes(x)
 ```
