--- a/auctestr/fbh_test.Rmd
+++ b/auctestr/fbh_test.Rmd
@@ -1,3 +1,14 @@
+---
+title: "``auctestr::fbh_test``"
+output: html_document
+---
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+library(auctestr)
+```
+
+
 ## ``fbh_test`` 
 
 Apply z-test for difference between ``auc_1`` and ``auc_2`` using FBH method.
@@ -12,8 +23,8 @@ fbh_test(auc_1, auc_2, n_p, n_n)
 </code></pre>
 #### Arguments
 
-* ``auc_1``: value of A’ statistic (or AUC, or Area Under the Receiver operating characteristic curve) for the first group (numeric).
-* ``auc_2``: value of A’ statistic (or AUC, or Area Under the Receiver operating characteristic curve) for the second group (numeric).
+* ``auc_1``: value of Area statistic (or AUC, or Area Under the Receiver operating characteristic curve) for the first group (numeric).
+* ``auc_2``: value of Area statistic (or AUC, or Area Under the Receiver operating characteristic curve) for the second group (numeric).
 * ``n_p``: number of positive observations (needed for calculation of standard error of Wilcoxon statistic) (numeric).
 * ``n_n``: number of negative observations (needed for calculation of standard error of Wilcoxon statistic) (numeric).
 
@@ -35,5 +46,4 @@ fbh_test(0.59, 0.56, 1000, 2500)
 #### References
 * Fogarty, Baker and Hudson, Case Studies in the use of ROC Curve Analysis for Sensor-Based Estimates in Human Computer Interaction, Proceedings of Graphics Interface (2005) pp. 129-136.
 
-See Also
-Other fbh method: auc_compare, se_auc
+
