--- a/auctestr/stouffer_z.Rmd
+++ b/auctestr/stouffer_z.Rmd
@@ -1,8 +1,16 @@
+---
+title: "``auctestr::stouffer_z``"
+output: html_document
+---
 
-## ``stouffer_z`` Compute aggregate z-score using Stouffer’s method.
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+library(auctestr)
+```
+## ``stouffer_z`` 
 
 #### Description
-Compute aggregate z-score using Stouffer’s method.
+Compute aggregate z-score using Stouffer's method.
 
 #### Usage
 <pre><code>
@@ -14,7 +22,7 @@ stouffer_z(z_vec, ignore.na = TRUE)
 * ``ignore.na``: should NA values be ignored? defaults to TRUE.
 
 ##### Value
-numeric, Z-score using Stouffer’s method aggregated over z_vec.
+numeric, Z-score using Stouffer's method aggregated over ``z_vec``.
 
 ### References
 * Stouffer, S.A.; Suchman, E.A.; DeVinney, L.C.; Star, S.A.; Williams, R.M. Jr. The American Soldier, Vol.1: Adjustment during Army Life (1949).
