--- a/bigdatadistances/gmdepth.Rmd
+++ b/bigdatadistances/gmdepth.Rmd
@@ -41,9 +41,18 @@ b=mvrnorm(50,c(10,10),Sigma=diag(c(0.1,0.1)))
 C=rbind(A,b)
 plot(C, pch=20, col=c(rep('black',450),rep('red',50)),
 xlab='x1',ylab='x2')
+```
+
+
+```{r}
 gmd.fit = gmdepth(A=C)
 depth= gmd.fit$depth
 distance = gmd.fit$distance
+head(distance)
+```
+
+
+```{r}
 plot(depth,distance, pch=20,
 col=c(rep('black',450),rep('red',50)))
 gmdepth(A=A,b=mvrnorm(1,c(0,0),Sigma=diag(2)))
