--- a/cvTools/cvTuning.Rmd
+++ b/cvTools/cvTuning.Rmd
@@ -1,3 +1,14 @@
+---
+title: "cvTools::cvTuning"
+output: html_document
+---
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+
+library(cvTools)
+```
+
 
 cvTuning Cross-validation for tuning parameter selection
 
