--- a/cvTools/cvFit.Rmd
+++ b/cvTools/cvFit.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "``add_scalebar``: Add scalebar to frames"
+title: "``cvTools::cvFit ``"
 output: html_document
 ---
 
@@ -43,6 +43,7 @@ costArgs = list(), envir = parent.frame(), seed = NULL,
 ...)
 
 </code></pre>
+
 #### Arguments 
 
 object the fitted model for which to estimate the prediction error, a function for fitting
@@ -56,14 +57,10 @@ typically used if the model in the function call is described by a formula.
 12 cvFit
 x a numeric matrix containing the predictor variables. This is typically used if the
 function call for fitting the models requires the predictor matrix and the response
-to be supplied as separate 
-</code></pre>
-#### Arguments 
+to be supplied as separate arguments 
 .
 y a numeric vector or matrix containing the response.
-args a list of additional 
-</code></pre>
-#### Arguments 
+args a list of additional arguments 
  to be passed to the model fitting function.
 cost a cost function measuring prediction loss. It should expect the observed values
 of the response to be passed as the first argument and the predicted values as the
@@ -81,28 +78,22 @@ foldType a character string specifying the type of folds to be generated. Possib
 are "random" (the default), "consecutive" or "interleaved".
 folds an object of class "cvFolds" giving the folds of the data for cross-validation (as
 returned by cvFolds). If supplied, this is preferred over K and R.
-names an optional character vector giving names for the 
-</code></pre>
-#### Arguments 
+names an optional character vector giving names for the arguments 
  containing the data
 to be used in the function call (see "
-#### Details 
+details 
 ").
-predictArgs a list of additional 
-</code></pre>
-#### Arguments 
+predictArgs a list of additional arguments 
  to be passed to the predict method of the fitted
 models.
 costArgs a list of additional 
-</code></pre>
-#### Arguments 
+arguments 
  to be passed to the prediction loss function cost.
 envir the environment in which to evaluate the function call for fitting the models
 (see eval).
 seed optional initial seed for the random number generator (see .Random.seed).
 ... additional 
-</code></pre>
-#### Arguments 
+arguments 
  to be passed down.
 
 #### Details 
@@ -126,24 +117,21 @@ interface. In this case, the accepted values for names depend on the method. For
 method, a character vector of length two should supplied, with the first element specifying the argument
 name for the formula and the second element specifying the argument name for the data (the
 default is to use c("formula", "data")). Note that names for both 
-</code></pre>
-#### Arguments 
+arguments 
  should be supplied
 even if only one is actually used. For the other methods, which do not have a formula argument, a
 character string specifying the argument name for the data should be supplied (the default is to use
 "data").
 If x is supplied, on the other hand, the predictor matrix and the response are added as separate
-
-</code></pre>
-#### Arguments 
+arguments 
  to the function call. In this case, names should be a character vector of length two, with
 the first element specifying the argument name for the predictor matrix and the second element
 specifying the argument name for the response (the default is to use c("x", "y")). It should be
 noted that the formula or data 
-</code></pre>
-#### Arguments 
+arguments 
  take precedence over x.
-Value
+
+#### Value
 An object of class "cv" with the following components:
 n an integer giving the number of observations.
 K an integer giving the number of folds.
@@ -156,7 +144,8 @@ reps a numeric matrix in which each column contains the respective estimated pre
 errors from all replications. This is only returned for repeated crossvalidation.
 seed the seed of the random number generator before cross-validation was performed.
 call the matched function call.
-Author(s)
+
+#### Author(s)
 Andreas Alfons
 See Also
 cvTool, cvSelect, cvTuning, cvFolds, cost
