--- a/gdata/env.Rmd
+++ b/gdata/env.Rmd
@@ -9,41 +9,23 @@ knitr::opts_chunk$set(echo = TRUE)
 library(gdata)
 ```
 
-env
-Describe All Loaded Environments
-
 #### Description
 
 Display name, number of objects, and size of all loaded environments.
 
 #### Usage
+
 <pre><code>
-
 env(unit="KB", digits=0)
-
 </code></pre>
+
 #### Arguments
 
-* unit unit for displaying environment size: "bytes", "KB", "MB", or first letter.
-* digits number of decimals to display when rounding environment size.
-
-#### Value
-
-A data frame with the following columns:
-Environment environment name.
-Objects number of objects in environment.
-KB environment size (see notes).
-
-#### Note
-The name of the environment size column is the same as the unit used.16
-first
-Author(s)
-Arni Magnusson
-See Also
-env is a verbose alternative to search.
-ll is a related function that describe* ``s``: objects in an environment.
+* ``unit``: unit for displaying environment size: "bytes", "KB", "MB", or first letter.
+* ``digits``: number of decimals to display when rounding environment size.
 
 #### Examples
+
 ```{r}
 
 ## Not run:
@@ -51,3 +33,17 @@ env()
 ## End(Not run)
 ```
 
+#### Value
+
+A data frame with the following columns:
+
+* Environment environment name.
+* Objects number of objects in environment.
+* KB environment size (see notes).
+
+#### Note
+The name of the environment size column is the same as the unit used.
+
+#### See Also
+env is a verbose alternative to search.
+ll is a related function that describe* ``s``: objects in an environment.
