--- a/gdata/nPairs.Rmd
+++ b/gdata/nPairs.Rmd
@@ -1,5 +1,5 @@
 ---
-  title: "``gdata::nPairs``"
+title: "``gdata::nPairs``"
 output: html_document
 ---
   
@@ -7,42 +7,26 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## ``nPairs``
-Number of variable pairs
 
 #### Description
 
-nPairs counts the number of pairs between variables.
+``nPairs()`` counts the number of pairs between variables.
 
 #### Usage
 <pre><code>
   
-  nPairs(x, margin=FALSE, names=TRUE, abbrev=TRUE, ...)40
-nPairs
+  nPairs(x, margin=FALSE, names=TRUE, abbrev=TRUE, ...)
 
 </code></pre>
-  #### Arguments
+
+#### Arguments
   
-  * ``x``: data.frame or a matrix
-margin logical, calculate the cumulative number of “pairs”
-names logical, add row/col-names to the output
-abbrev logical, abbreviate names
+* ``x``: data.frame or a matrix
+* ``margin``: logical, calculate the cumulative number of “pairs”
+* ``names``: logical, add row/col-names to the output
+* ``abbrev``: logical, abbreviate names
 ... ot* ``...``: arguments passed to abbreviate
 
-#### Details
-
-The class of returned matrix is nPairs and matrix. There is a summary method, which shows the opposite information - counts how many times each variable is known, while the other variable of a
-pair is not. See examples.
-
-#### Value
-
-Matrix of order k, where k is the number of columns in x. 
-Values in a matrix represent the number
-of pairs between columns/variables in x. If margin=TRUE, the number of columns is k + 1 and the last column represents the cumulative number of pairing all variables.
-Author(s)
-Gregor Gorjanc
-See Also
-abbreviate
 
 #### Examples
 ```{r}
@@ -56,12 +40,28 @@ test <- data.frame(V1=c(1, 2, 3, 4, 5),
 nPairs(x=test)
 ## Without names
 nPairs(x=test, names=FALSE)
+```
+
+```{r}
 ## Longer names
 colnames(test) <- c("Variable1", "Variable2", "Variable3", "Variable4")
 nPairs(x=test)
 ## Margin
 nPairs(x=test, margin=TRUE)
-## Summaryobject.size
-41
+## Summaryobject.
 summary(object=nPairs(x=test))
 ```
+
+#### Details
+
+The class of returned matrix is nPairs and matrix. There is a summary method, which shows the opposite information - counts how many times each variable is known, while the other variable of a pair is not. See examples.
+
+#### Value
+
+Matrix of order k, where k is the number of columns in x. 
+Values in a matrix represent the number of pairs between columns/variables in x. 
+If margin=TRUE, the number of columns is k + 1 and the last column represents the cumulative number of pairing all variables.
+
+#### Author(s)
+Gregor Gorjanc
+
