--- a/gdata/combine.Rmd
+++ b/gdata/combine.Rmd
@@ -12,35 +12,19 @@ Combine R Objects With a Column Labeling the Source
 
 #### Description
 
-Take a sequence of vector, matrix or data frames and combine into rows of a common data frame
-with an additional column source indicating the source object.
+Take a sequence of vector, matrix or data frames and combine into rows of a common data frame with an additional column source indicating the source object.
 
 #### Usage
+
 <pre><code>
-
 combine(..., names=NULL)
-
 </code></pre>
+
 #### Arguments
 
-...
-names
-vectors or matrices to combine.
-character vector of names to use when creating source column.
+* ``...``:  vectors or matrices to combine.
+* ``names``: character vector of names to use when creating source column.
 
-#### Details
-
-If there are several matrix arguments, they must all have the same number of columns. The number of columns in the result will be one larger than the number of columns in the component matrixes.
-If all of the arguments are vectors, these are treated as single column matrixes. In this case, the column containing the combineinated vector data is labeled data.
-When the arguments consist of a mix of matrices and vectors the number of columns of the result is determined by the number of columns of the matrix arguments. Vectors are considered row vectors
-and have their values recycled or subsetted (if necessary) to achieve this length. The source column is created as a factor with levels corresponding to the name of the object from
-which the each row was obtained. When the names argument is ommitted, the name of each object is obtained from the specified argument name in the call (if present) or from the name of the object.
-See below for examples.
-
-#### Author(s)
-Gregory R. Warnes <greg@warnes.net>
-See Also
-rbind, merge
 
 #### Examples
 ```{r}
@@ -54,3 +38,17 @@ combine(a,b,names=c("one","two"))
 c <- 1:6
 combine(b,c)
 ```
+
+
+#### Details
+
+If there are several matrix arguments, they must all have the same number of columns. The number of columns in the result will be one larger than the number of columns in the component matrixes.
+If all of the arguments are vectors, these are treated as single column matrixes. In this case, the column containing the combineinated vector data is labeled data.
+
+When the arguments consist of a mix of matrices and vectors the number of columns of the result is determined by the number of columns of the matrix arguments. Vectors are considered row vectors and have their values recycled or subsetted (if necessary) to achieve this length. The source column is created as a factor with levels corresponding to the name of the object from which the each row was obtained. When the names argument is ommitted, the name of each object is obtained from the specified argument name in the call (if present) or from the name of the object.
+See below for examples.
+
+#### Author(s)
+Gregory R. Warnes <greg@warnes.net>
+See Also
+rbind, merge
